@@ -17,6 +17,7 @@ Release 0.19.0 - Unreleased
    HBASE-912   PE is broken when other tables exist
    HBASE-853   [shell] Cannot describe meta tables (Izaak Rubin via Stack)
    HBASE-844   Can't pass script to hbase shell 
+   HBASE-837   Add unit tests for ThriftServer.HBaseHandler (Izaak Rubin via Stack)
 
   IMPROVEMENTS
    HBASE-901   Add a limit to key length, check key and value length on client side
